<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/fragment_margin">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/text_new_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_new_item"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_done"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        />

    <Button
        android:id="@+id/btn_revert"
        android:text="@string/revert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_done"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>